--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   </div>
 </nav>
 <main>
+  <h2 id="book-status" class="head"></h2>
   <div id="content" class="content"></div>
 </main>
     </body>
